Week 5 capstone progress

--- a/about.html
+++ b/about.html
@@ -35,6 +35,6 @@
     <li>I want to develop a skill set that can provide a healthy living for my future family</li>
   </ul>
 </main>
-<footer>Created by Ethan Krieg</footer>
+<footer>Created by Ethan Krieg 2024</footer>
 </body>
 </html>
