--- a/index.html
+++ b/index.html
@@ -5,17 +5,30 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>PocketWatch</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
+  <script src="https://kit.fontawesome.com/73e9f22e74.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <header>
     <h1>Dashboard</h1>
-    <a href="about.html">About me</a>
-    <a href="contact.html">Contact</a>
+    <!-- <a href="about.html">About me</a>
+    <a href="contact.html">Contact</a> -->
   </header>
-<nav class="sidebar"></nav>
+  <nav>
+  <i class="fa-solid fa-bars"></i>
+  <ul class="hidden--mobile nav-links">
+    <li>Dashboard</li>
+    <li><a href="about.html">About me</a></li>
+    <li><a href="contact.html">Contact</a></li>
+  </ul>
+  </nav>
 <main>
 
 </main>
-<footer>Created by Ethan Krieg</footer>
+<footer>Created by Ethan Krieg 2024</footer>
+<script src="index.js"></script>
 </body>
 </html>
