--- a/index.html
+++ b/index.html
@@ -25,10 +25,8 @@
     <li><a href="contact.html">Contact</a></li>
   </ul>
   </nav>
-<main>
-
-</main>
+  <div id="root"></div>
 <footer>Created by Ethan Krieg 2024</footer>
-<script src="index.js"></script>
+<script src="index.js" type="module"></script>
 </body>
 </html>
