Week 6 capstone SPA assignment

--- a/old/contact.html
+++ b/old/contact.html
@@ -12,7 +12,10 @@
   <script src="https://kit.fontawesome.com/73e9f22e74.js" crossorigin="anonymous"></script>
 </head>
 <body>
-  <div id="root"></div>
-  <script src="index.js" type="module"></script>
+  <header>
+    <h1>Contact me</h1>
+  </header>
+
+
 </body>
 </html>
